fix some issues, add 3. feladat