@@ -141,7 +141,19 @@
             <artifactId>jakarta.activation-api</artifactId>
             <version>2.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.xml.messaging.saaj</groupId>
+            <artifactId>saaj-impl</artifactId>
+            <version>1.5.1</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.xml.ws</groupId>
+            <artifactId>jakarta.xml.ws-api</artifactId>
+            <version>2.3.2</version>
+        </dependency>
     </dependencies>
+
+
 
     <build>
         <plugins>
@@ -171,6 +183,15 @@
                 <configuration>
                     <source>17</source>
                     <target>17</target>
+                    <fork>true</fork>
+                    <compilerArgs>
+                        <arg>--add-exports</arg>
+                        <arg>com.sun.xml.ws.jaxws/com.sun.xml.ws.api.policy=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>com.sun.xml.ws.jaxws/com.sun.xml.ws.api.message=ALL-UNNAMED</arg>
+                        <arg>--add-exports</arg>
+                        <arg>com.sun.xml.ws.jaxws/com.sun.xml.ws.spi=ALL-UNNAMED</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -189,6 +210,10 @@
                             <noManPages>true</noManPages>
                             <stripDebug>true</stripDebug>
                             <noHeaderFiles>true</noHeaderFiles>
+                            <compilerArgs>
+                                <arg>--add-exports</arg>
+                                <arg>com.sun.xml.ws.jaxws/com.sun.xml.ws.api.policy=ALL-UNNAMED</arg>
+                            </compilerArgs>
                         </configuration>
                     </execution>
                 </executions>
